[package]
name = "ben_celia_game"
version = "0.1.0"
authors = ["Ben Pinhorn <00ben.allen@gmail.com>"]
edition = "2018"

[dependencies]
piston_window = "0.89.0"
piston = "0.42.0"
piston2d-graphics = "0.30.0"
pistoncore-glutin_window = "0.54.0"
piston2d-opengl_graphics = "0.59.0"
specs = "0.14.3"
specs-derive = "0.4.0"
